add the heading

--- a/public/index.html
+++ b/public/index.html
@@ -222,6 +222,7 @@
       });
     </script>
   </head>
+  <h1>calculator2</h1>
   <body onLoad="setValue(0)">
     <div class="container">
       <div id="results">
