add one more heading

--- a/public/index.html
+++ b/public/index.html
@@ -223,6 +223,7 @@
     </script>
   </head>
   <h1>calculator2</h1>
+  <h2>using jquery</h2>
   <body onLoad="setValue(0)">
     <div class="container">
       <div id="results">
